--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1576,10 +1576,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                             <rect key="frame" x="0.0" y="0.0" width="126" height="230"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7aS-la-TfT" userLabel="b_favorites">
-                                                    <rect key="frame" x="96" y="14" width="25" height="25"/>
-                                                    <state key="normal" image="dwb_pak_button_hearth_gray"/>
-                                                </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B9f-I9-ExI" userLabel="iv_item_photo">
                                                     <rect key="frame" x="8" y="20" width="110" height="110"/>
                                                     <constraints>
@@ -1605,6 +1601,10 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                         <constraint firstAttribute="width" constant="30" id="aEc-KW-jwC"/>
                                                     </constraints>
                                                     <state key="normal" image="dwb_pak_add_Item"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7aS-la-TfT" userLabel="b_favorites">
+                                                    <rect key="frame" x="96" y="14" width="25" height="25"/>
+                                                    <state key="normal" image="dwb_pak_button_hearth_gray"/>
                                                 </button>
                                             </subviews>
                                         </view>
@@ -2542,6 +2542,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="b_add_invitation" destination="dK1-zz-KBd" id="ai2-ft-3NK"/>
                         <outlet property="cv_discount_list" destination="UQt-Ok-bz1" id="Hor-W2-ZMa"/>
                         <outlet property="l_code" destination="mb4-Wh-DeD" id="7BZ-hJ-kMs"/>
                         <outlet property="v_add_code" destination="5JS-bm-Lxd" id="lcY-xj-lAb"/>
@@ -2581,10 +2582,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                             <rect key="frame" x="0.0" y="0.0" width="123" height="230"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yug-NV-1Ts" userLabel="b_favorites">
-                                                    <rect key="frame" x="96" y="14" width="25" height="25"/>
-                                                    <state key="normal" image="dwb_pak_button_hearth_gray"/>
-                                                </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oli-Z3-AK2" userLabel="iv_item_photo">
                                                     <rect key="frame" x="8" y="20" width="110" height="110"/>
                                                     <constraints>
@@ -2610,6 +2607,10 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                         <constraint firstAttribute="height" constant="20" id="Til-Lh-u0j"/>
                                                     </constraints>
                                                     <state key="normal" image="dwb_pak_add_Item"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yug-NV-1Ts" userLabel="b_favorites">
+                                                    <rect key="frame" x="96" y="14" width="25" height="25"/>
+                                                    <state key="normal" image="dwb_pak_button_hearth_gray"/>
                                                 </button>
                                             </subviews>
                                         </view>
@@ -7341,13 +7342,13 @@ EMKhTGlzdG8hA
     <inferredMetricsTieBreakers>
         <segue reference="0wQ-9P-YXB"/>
         <segue reference="e49-xG-mKz"/>
-        <segue reference="7yi-GO-gff"/>
+        <segue reference="OS7-IV-a8p"/>
         <segue reference="RzB-aK-gvt"/>
-        <segue reference="zhY-cZ-3JD"/>
+        <segue reference="2h9-cx-RAU"/>
         <segue reference="MHy-C4-6QB"/>
         <segue reference="bmc-MF-fkN"/>
-        <segue reference="YD1-6P-6T7"/>
-        <segue reference="k7V-In-QB3"/>
+        <segue reference="oBi-e6-wfk"/>
+        <segue reference="1vM-Rq-4HF"/>
         <segue reference="kk5-HE-cyu"/>
         <segue reference="AdC-De-agH"/>
     </inferredMetricsTieBreakers>
